# wapniak

./: .gitignore  CMakeLists.txt
src/: data.cpp  data.h  gui_app.cpp  gui_app.h  main.cpp  queue.h  static_data.S  static_data.h  transformation.h
